Report Fire UI update & Begin Resolve Fire Work

--- a/Wildfire/Wildfire.csproj
+++ b/Wildfire/Wildfire.csproj
@@ -35,6 +35,9 @@
     <EmbeddedResource Update="Views\ReportFireOverView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\ResolveFireInfoView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\SearchView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
