--- a/Wildfire.Android/Wildfire.Android.csproj
+++ b/Wildfire.Android/Wildfire.Android.csproj
@@ -151,6 +151,9 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\cancel.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\b_g.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
