Notifications + Resolve Fire Features functioning. More clean up work needs to be done.

--- a/Wildfire.Android/Wildfire.Android.csproj
+++ b/Wildfire.Android/Wildfire.Android.csproj
@@ -94,6 +94,7 @@
   <ItemGroup>
     <Compile Include="AuthDroid.cs" />
     <Compile Include="MainActivity.cs" />
+    <Compile Include="NotificationHelper.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
