--- a/Wildfire.Android/Wildfire.Android.csproj
+++ b/Wildfire.Android/Wildfire.Android.csproj
@@ -155,6 +155,12 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\b_g.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Assets\SearchPins.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Assets\FlamePins.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
