--- a/Wildfire.Android/Wildfire.Android.csproj
+++ b/Wildfire.Android/Wildfire.Android.csproj
@@ -188,6 +188,9 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\photo.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\xhdpi.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
