--- a/Wildfire.Android/Properties/AndroidManifest.xml
+++ b/Wildfire.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="12" android:versionName="1.0" package="com.companyname.wildfire" android:installLocation="preferExternal">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
+  <supports-screens android:resizeable="true" android:smallScreens="true" android:normalScreens="true" android:largeScreens="true"/>
 	<application android:label="Wildfire.Android" android:theme="@style/MainTheme" android:icon="@drawable/xhdpi">
 		<meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyAKErMHtqt31v3KNrM1T68myGiMKYfgNXA" />
 		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
