--- a/Wildfire.Android/Wildfire.Android.csproj
+++ b/Wildfire.Android/Wildfire.Android.csproj
@@ -207,6 +207,9 @@
   <ItemGroup>
     <AndroidResource Include="Resources\mipmap-xxxhdpi\xhdpi.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\next.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
