--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+Constants.cs
+AndroidManifest.xml
+google-services.json
+
 # User-specific files
 *.rsuser
 *.suo
